sum function updated

--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -185,8 +185,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "33d6cb61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type('data science')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0e66d1c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(\"hello world\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "846c1752",
+   "metadata": {},
+   "source": [
+    "# len()\n",
+    "Length of an object(string , tuple,list,set,dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ae3e0c47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = \"python\"\n",
+    "print(type(A))\n",
+    "print(len(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "540ea2cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = \"data science\"\n",
+    "print(type(b))\n",
+    "print(len(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8b4edc62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "B =[10,20,30,40,50,60,70]\n",
+    "print(type(B))\n",
+    "print(len(B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e65966b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "C=(10,20,30,40,50,60,70)\n",
+    "print(type(C))\n",
+    "print(len(C))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a9ddb5e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {10,20,30,40,50,60,70}\n",
+    "print(type(d))\n",
+    "print(len(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8321bc5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = {10:'a',20:'b',30:'c',40:'d'}\n",
+    "print(type(e))  \n",
+    "print(len(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "bfa389c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = {'name':'john', 'age':25, 'city':'new york'}\n",
+    "print(type(info))\n",
+    "print(len(info))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d12f9ac5",
+   "metadata": {},
+   "source": [
+    "# sum()\n",
+    "Used to find sum of elements(list,tuple,set)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "fcf74d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "7\n",
+      "340\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [10,20,30,40,60,80,100]\n",
+    "print(type(A))\n",
+    "print(len(A))\n",
+    "print(sum(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c389bd7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "5\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = (1, 2, 3, 4, 5)\n",
+    "print(type(b))\n",
+    "print(len(b))\n",
+    "print(sum(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3335e09",
    "metadata": {},
    "outputs": [],
    "source": []
