till round function

--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -437,9 +437,630 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "580e63d1",
+   "metadata": {},
+   "source": [
+    "# max()\n",
+    "It is used to find maximum element of any object(list,tuple,set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f3335e09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the maximum value from a list\n",
+    "A = [10,20,50,100,200,300,400]\n",
+    "print(max(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0529cb6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the maximum value from a tuple\n",
+    "A = (10,20,50,100,200,300,400)\n",
+    "print(max(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1e31edf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the maximum value from a set\n",
+    "A = {10,20,50,100,200,300,400}\n",
+    "print(max(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c1a4a4fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the minimum value from a dictionary\n",
+    "A = {10:'a',20:'b',30:'c',40:'d'}\n",
+    "print(min(A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a154687b",
+   "metadata": {},
+   "source": [
+    "# min()\n",
+    "Used to find minimum element in any object(list,tuple,set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "76cce656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the min value from a list\n",
+    "A = [10,20,50,100,200,300,400]\n",
+    "print(min(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "82ecb5fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the minimum value from a tuple\n",
+    "A = (10,20,50,100,200,300,400)  \n",
+    "print(min(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cf14b19e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the minimum value from a set\n",
+    "A = {10,20,50,100,200,300,400}  \n",
+    "print(min(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8fdf42c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the minimum value from a dictionary\n",
+    "A = {10:'a',20:'b',30:'c',40:'d'}   \n",
+    "print(min(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e3daf635",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the minimum value from a tuple\n",
+    "A = (10,20,50,100,200,300,400)  \n",
+    "print(min(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3b47a1f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum value is : 5\n",
+      "Minimum value is : 1\n",
+      "sum of elements in A: 15\n",
+      "length of list: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the maximum, minimum, sum and length of elements in a list\n",
+    "A =[1,2,3,4,5]\n",
+    "print(\"Maximum value is :\" ,max(A))\n",
+    "print(\"Minimum value is :\",min(A))\n",
+    "print(\"sum of elements in A:\",sum(A))\n",
+    "print(\"length of list:\",len(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8b44f0c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum value is : 5\n",
+      "Minimum value is : 1\n",
+      "sum of elements in A: 15\n",
+      "length of list: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the maximum, minimum, sum and length of elements in a tuple\n",
+    "A =(1,2,3,4,5)\n",
+    "print(\"Maximum value is :\" ,max(A))\n",
+    "print(\"Minimum value is :\",min(A))\n",
+    "print(\"sum of elements in A:\",sum(A))\n",
+    "print(\"length of list:\",len(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4437f9cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum value is : 5\n",
+      "Minimum value is : 1\n",
+      "length of list: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the maximum, minimum, sum and length of elements in a dictionary\n",
+    "b = {1:'a',2:'b',3:'c',4:'d',5:'e'}\n",
+    "print(\"Maximum value is :\" ,max(b))\n",
+    "print(\"Minimum value is :\",min(b))\n",
+    "print(\"length of list:\",len(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "51d2df5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum value is : 5\n",
+      "Minimum value is : 1\n",
+      "sum of elements in c: 15\n",
+      "length of set: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the maximum, minimum, sum and length of elements in a set\n",
+    "c = {1,2,3,4,5}\n",
+    "print(\"Maximum value is :\" ,max(c))\n",
+    "print(\"Minimum value is :\",min(c))\n",
+    "print(\"sum of elements in c:\",sum(c))\n",
+    "print(\"length of set:\",len(c))  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cf0fd3d",
+   "metadata": {},
+   "source": [
+    "# abs\n",
+    "It is used to convert negative value into positive(int,float)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c3fb8f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# abs function returns the absolute value of a number\n",
+    "a = -10\n",
+    "print(abs(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3b21c1ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# abs function returns the absolute value of a number\n",
+    "a = -200.5\n",
+    "print(abs(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ee6f60b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(-3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a4970200",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(-3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "62b596b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "292e2249",
+   "metadata": {},
+   "source": [
+    "# round\n",
+    "It is used to round number to a given decimal palces\n",
+    "\n",
+    "round(number , decimal_places)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cbafe075",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.4568\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3.456789\n",
+    "# round a to 4 decimal places\n",
+    "print(round(a,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "40df7aea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.895"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# round to 3 decimal\n",
+    "round(7.89543,3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2bf75f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(3.456)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "23878ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(3.678)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7c5508aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(10.324)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6c345602",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "121"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(120.98652)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c73b7a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.14"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(3.14159,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "74c423d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3.14"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(-3.14159,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fde45ec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-200.246"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(-200.2457833,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "732bb58e",
+   "metadata": {},
+   "source": [
+    "# Type casting\n",
+    "Used to convert one data type into other data type."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3335e09",
+   "id": "8689b368",
    "metadata": {},
    "outputs": [],
    "source": []
