--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -1058,9 +1058,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c7b75b9",
+   "metadata": {},
+   "source": [
+    "# int\n",
+    "* It converts given value to a integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "8689b368",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3.45\n",
+    "print(type(a))\n",
+    "b = int(a)\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "dea25f5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# convert float to int\n",
+    "a = 7.89\n",
+    "b = int(a)\n",
+    "print(b)\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "41d2832c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# str to integer\n",
+    "a = int(\"123\")   \n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b2719327",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "1234\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# float to integer\n",
+    "# Integer within string into int\n",
+    "# boolean to integer\n",
+    "print(int(4.5))\n",
+    "print(int(\"1234\"))\n",
+    "print(int(True))\n",
+    "print(int(False))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8689b368",
+   "id": "565b990f",
    "metadata": {},
    "outputs": [],
    "source": []
