--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -2286,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "1e9f6645",
    "metadata": {},
    "outputs": [
@@ -2308,9 +2308,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1a611d46",
+   "metadata": {},
+   "source": [
+    "# eval\n",
+    "It takes list,tuple,set,dict from users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "ec336221",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'john', 'age': 25, 'city': 'new york'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =eval(input())\n",
+    "print(A)\n",
+    "print(type(A)) \n",
+    "# it takes list,tuple,set,dictionary as input from user\n",
+    "# example input:{'name':'john', 'age':25, 'city':'new york'}\n",
+    "# example input:[10,20,30,40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "666dd0a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =eval(input())\n",
+    "print(A)\n",
+    "print(type(A)) \n",
+    "# it takes list,tuple,set,dictionary as input from user\n",
+    "# example input:{'name':'john', 'age':25, 'city':'new york'}\n",
+    "# example input:[10,20,30,40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "0abcca27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{40, 10, 20, 30}\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =eval(input())\n",
+    "print(A)\n",
+    "print(type(A)) # example input set :{10,20,30,40}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1973ff55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20, 30, 40)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example input tuple :(10,20,30,40)\n",
+    "A = eval(input())\n",
+    "print(A)\n",
+    "print(type(A)) # example input tuple :(10,20,30,40)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec336221",
+   "id": "f590d651",
    "metadata": {},
    "outputs": [],
    "source": []
