--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -3836,9 +3836,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "784bc0e5",
+   "metadata": {},
+   "source": [
+    "# exec\n",
+    "It is used to execute the expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "86a3cdc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 20\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "f9bdbe73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "exec(\"a=10 \\nb=20 \\nprint(a+b)\")\n",
+    "# \\n : new line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c58408d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=[1,2,3,4]\n",
+    "print(sum(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "b3ce4276",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "exec(\"A=[1,2,3,4] \\nprint(sum(A))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "a431ab05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "A =[10,20,30,40]\n",
+    "print(min(A))\n",
+    "print(max(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "0f3a86d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "exec(\"A=[10,20,30,40] \\nprint(min(A)) \\nprint(max(A))\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86a3cdc0",
+   "id": "c70e9851",
    "metadata": {},
    "outputs": [],
    "source": []
