--- a/inbuilt_function.ipynb
+++ b/inbuilt_function.ipynb
@@ -3961,9 +3961,364 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "345114db",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# zip\n",
+    "It is used to combine elements of two objects(list,tuple)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "c70e9851",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'a'), (2, 'b'), (3, 'c'), (4, 'd')]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A =[1,2,3,4]\n",
+    "B = ['a','b','c','d']\n",
+    "list(zip(A,B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "45caa863",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('name', 'Jeevitha'), ('Age', 30)]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = ['name','Age']\n",
+    "Y = ['Jeevitha',30]\n",
+    "list(zip(X,Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "3f039dd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('name', 'Jeevitha', 'Female'), ('Age', 30, True)]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = ('name','Age')\n",
+    "y = ('Jeevitha',30)\n",
+    "z = ('Female',True) \n",
+    "list(zip(x,y,z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "5aadadc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('name', 'Jeevitha'), ('Age', 30))"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(zip(X,Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "56c9e5b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('name', 'Jeevitha'), ('Age', 30))"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(zip(X,Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "5b44fa8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Jeevitha', 'Age': 30}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(X,Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "3780f1b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('name', 'Jeevitha')]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = ['name','Age']\n",
+    "Y = ['Jeevitha']\n",
+    "list(zip(X,Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "cbdc4c1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 'b')]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x='a'\n",
+    "y='b'\n",
+    "list(zip(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "b22c584b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('a', 'b')}"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x='a'\n",
+    "y='b'\n",
+    "set(zip(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "894dec3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'a'), (2, 'b'), (3, 'c')]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A =[1,2,3]\n",
+    "B=['a','b','c','d']\n",
+    "list(zip(A,B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "44063d02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 1), ('b', 2), ('c', 3)]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A =[1,2,3]\n",
+    "B=['a','b','c','d']\n",
+    "list(zip(B,A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "8c2a963e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'a'), (2, 'b'), (3, 'c')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(zip(A,B)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "03727043",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2+3**2+1000\n",
+      "1011\n"
+     ]
+    }
+   ],
+   "source": [
+    "# eval: Used to evaluate the string expression\n",
+    "A = \"2+3**2+1000\"\n",
+    "print(A)\n",
+    "print(eval(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "3edff9ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2+3**2+1000\n",
+      "1011\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A)\n",
+    "print(2+3**2+1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "e289863c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1011\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(eval(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "77ea5e85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1011\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = 2+3**2+1000\n",
+    "print(A)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c70e9851",
+   "id": "ad9423f9",
    "metadata": {},
    "outputs": [],
    "source": []
